--- a/notebooks/Diabetes_model_for_API.ipynb
+++ b/notebooks/Diabetes_model_for_API.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LnPbntVRnfvV"
@@ -11,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "-71UtHzNVWjB"
       },
@@ -25,6 +26,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "bmfOfG8joBBy"
@@ -37,19 +39,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "Xpw6Mj_pn_TL"
       },
       "outputs": [],
       "source": [
         "# loading the diabetes dataset to a pandas DataFrame\n",
-        "diabetes_dataset = pd.read_csv('./diabetes.csv') "
+        "diabetes_dataset = pd.read_csv('../data/curated.csv') "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -172,7 +174,7 @@
               "4                     2.288   33        1  "
             ]
           },
-          "execution_count": 4,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -184,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -199,7 +201,7 @@
               "(768, 9)"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -211,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -376,7 +378,7 @@
               "max     67.100000                  2.420000   81.000000    1.000000  "
             ]
           },
-          "execution_count": 6,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -415,6 +417,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "cB1qRaNcqeh5"
@@ -427,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -518,7 +521,7 @@
               "1        35.142537                  0.550500  37.067164  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -529,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "id": "RoDW7l9mqqHZ"
       },
@@ -542,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -555,43 +558,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "     Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
-            "0              6      148             72             35        0  33.6   \n",
-            "1              1       85             66             29        0  26.6   \n",
-            "2              8      183             64              0        0  23.3   \n",
-            "3              1       89             66             23       94  28.1   \n",
-            "4              0      137             40             35      168  43.1   \n",
-            "..           ...      ...            ...            ...      ...   ...   \n",
-            "763           10      101             76             48      180  32.9   \n",
-            "764            2      122             70             27        0  36.8   \n",
-            "765            5      121             72             23      112  26.2   \n",
-            "766            1      126             60              0        0  30.1   \n",
-            "767            1       93             70             31        0  30.4   \n",
-            "\n",
-            "     DiabetesPedigreeFunction  Age  \n",
-            "0                       0.627   50  \n",
-            "1                       0.351   31  \n",
-            "2                       0.672   32  \n",
-            "3                       0.167   21  \n",
-            "4                       2.288   33  \n",
-            "..                        ...  ...  \n",
-            "763                     0.171   63  \n",
-            "764                     0.340   27  \n",
-            "765                     0.245   30  \n",
-            "766                     0.349   47  \n",
-            "767                     0.315   23  \n",
-            "\n",
-            "[768 rows x 8 columns]\n"
+            "<class 'pandas.core.frame.DataFrame'>\n"
           ]
         }
       ],
       "source": [
-        "print(X)"
+        "print(type(X))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -604,26 +581,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0      1\n",
-            "1      0\n",
-            "2      1\n",
-            "3      0\n",
-            "4      1\n",
-            "      ..\n",
-            "763    0\n",
-            "764    0\n",
-            "765    0\n",
-            "766    1\n",
-            "767    0\n",
-            "Name: Outcome, Length: 768, dtype: int64\n"
+            "<class 'pandas.core.series.Series'>\n"
           ]
         }
       ],
       "source": [
-        "print(Y)"
+        "print(type(Y))"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "gHciEFkxsoQP"
@@ -667,6 +634,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ElJ3tkOtuC_n"
@@ -717,6 +685,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "UV4-CAfquiyP"
@@ -726,6 +695,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "yhAjGPJWunXa"
@@ -807,6 +777,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "gq8ZX1xpwPF5"
@@ -862,6 +833,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FCHCMHpshHU4"
@@ -1004,7 +976,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.10.0"
     },
     "vscode": {
       "interpreter": {
